<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>

    <string name="act_main_windowname_hint">Window name</string>
    <string name="act_main_open_window">Open window</string>

    <string name="act_window_name">Window name</string>
    <string name="act_building_name">Building windows</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>

    <string name="menu_windows">Building windows</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>
    <string name="act_change_window_status">Switch</string>
    <string name="act_refresh">Refresh</string>

    <!--Strings used in the dashboard-->
    <string name="tab_building">Buildings</string>
    <string name="tab_windows">Windows</string>
    <string name="tab_rooms">Rooms</string>
    <string name="tab_heaters">Heaters</string>
    <string name="act_main_welcome">Welcome on faircorp,\n the app to manage building windows</string>

    <!--Strings used in activity heater-->
    <string name="act_heater_name">Heater name</string>
    <string name="act_heater_room">Room</string>
    <string name="act_heater_power">Power</string>
    <string name="act_heater_status">Status</string>
</resources>